Fix errors & warnings